--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; url=GAVILMOTORS.html">
-    <title>Redireccionando...</title>
+    <title>GAVILMOTORS</title>
 </head>
 <body>
     <!-- No se muestra ningún contenido -->
