--- a/GAVILMOTORS.html
+++ b/GAVILMOTORS.html
@@ -139,14 +139,14 @@
                 </div>
                 <!-- Imagen del carro debajo del logo -->
                 <div class="product-img">
-                    <img src="categorias/1.png" alt="Carro 1">
+                    <img src="categorias/volkswagen polo 2005.jpeg" alt="Carro 1">
                 </div>
                 <!-- Contenido de texto y botón -->
                 <div class="product-content">
                     <div class="product-txt">
-                        <span>$9500</span>
-                        <h3>NISSAN</h3>
-                        <p>GRAND VITARA SZ</p>
+                        <span>$4900</span>
+                        <h3>VOLKSWAGEN</h3>
+                        <p>POLO 2005</p>
                     </div>
                 </div>
                 <a href="#" class="btn-1">Ver</a>
@@ -160,14 +160,14 @@
                 </div>
                 <!-- Imagen del carro debajo del logo -->
                 <div class="product-img">
-                    <img src="categorias/7.png" alt="Carro 1">
+                    <img src="categorias/Peugeot 206 del 2005.jpeg" alt="Carro 1">
                 </div>
                 <!-- Contenido de texto y botón -->
                 <div class="product-content">
                     <div class="product-txt">
-                        <span>$9500</span>
-                        <h3>NISSAN</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis</p>
+                        <span>$3900</span>
+                        <h3>PEUGEOT</h3>
+                        <p>PEUGEOT 206 DEL 2005</p>
                     </div>
                 </div>
                 <a href="#" class="btn-1">Ver</a>
@@ -181,14 +181,14 @@
                 </div>
                 <!-- Imagen del carro debajo del logo -->
                 <div class="product-img">
-                    <img src="categorias/3.png" alt="Carro 1">
+                    <img src="categorias/mitsubishi montero.jpeg" alt="Carro 1">
                 </div>
                 <!-- Contenido de texto y botón -->
                 <div class="product-content">
                     <div class="product-txt">
-                        <span>$9500</span>
-                        <h3>NISSAN</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis</p>
+                        <span>$3000</span>
+                        <h3>MITSUBISHI</h3>
+                        <p>MITSUBISHI MONTERO 1993</p>
                     </div>
                 </div>
                 <a href="#" class="btn-1">Ver</a>
@@ -202,14 +202,14 @@
                 </div>
                 <!-- Imagen del carro debajo del logo -->
                 <div class="product-img">
-                    <img src="categorias/4.png" alt="Carro 1">
+                    <img src="categorias/kia picanto 2020.jpeg" alt="Carro 1">
                 </div>
                 <!-- Contenido de texto y botón -->
                 <div class="product-content">
                     <div class="product-txt">
-                        <span>$9500</span>
-                        <h3>NISSAN</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis</p>
+                        <span>$10600</span>
+                        <h3>KIA</h3>
+                        <p>KIA PICANTO 2020</p>
                     </div>
                 </div>
                 <a href="#" class="btn-1">Ver</a>
@@ -223,14 +223,14 @@
                 </div>
                 <!-- Imagen del carro debajo del logo -->
                 <div class="product-img">
-                    <img src="categorias/5.png" alt="Carro 1">
+                    <img src="categorias/hyundai elantra.jpeg" alt="Carro 1">
                 </div>
                 <!-- Contenido de texto y botón -->
                 <div class="product-content">
                     <div class="product-txt">
-                        <span>$9500</span>
-                        <h3>NISSAN</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis</p>
+                        <span>$10800</span>
+                        <h3>HYUNDAI</h3>
+                        <p>HYUNDAI ELANTRA 2013</p>
                     </div>
                 </div>
                 <a href="#" class="btn-1">Ver</a>
@@ -244,14 +244,14 @@
                 </div>
                 <!-- Imagen del carro debajo del logo -->
                 <div class="product-img">
-                    <img src="categorias/6.png" alt="Carro 1">
+                    <img src="categorias/honda crv 2009.jpeg" alt="Carro 1">
                 </div>
                 <!-- Contenido de texto y botón -->
                 <div class="product-content">
                     <div class="product-txt">
-                        <span>$9500</span>
-                        <h3>NISSAN</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis</p>
+                        <span>$7700</span>
+                        <h3>HONDA</h3>
+                        <p>HONDA CR-V DEL 2009</p>
                     </div>
                 </div>
                 <a href="#" class="btn-1">Ver</a>
@@ -265,14 +265,14 @@
                 </div>
                 <!-- Imagen del carro debajo del logo -->
                 <div class="product-img">
-                    <img src="categorias/7.png" alt="Carro 1">
+                    <img src="categorias/Ford Festiva.jpeg" alt="Carro 1">
                 </div>
                 <!-- Contenido de texto y botón -->
                 <div class="product-content">
                     <div class="product-txt">
-                        <span>$9500</span>
-                        <h3>NISSAN</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis</p>
+                        <span>$2900</span>
+                        <h3>FORD</h3>
+                        <p>FORD FESTIVA</p>
                     </div>
                 </div>
                 <a href="#" class="btn-1">Ver</a>
@@ -286,35 +286,14 @@
                 </div>
                 <!-- Imagen del carro debajo del logo -->
                 <div class="product-img">
-                    <img src="categorias/8.png" alt="Carro 1">
+                    <img src="categorias/chevrolet aveo 2016.jpeg" alt="Carro 1">
                 </div>
                 <!-- Contenido de texto y botón -->
                 <div class="product-content">
                     <div class="product-txt">
-                        <span>$9500</span>
-                        <h3>NISSAN</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis</p>
-                    </div>
-                </div>
-                <a href="#" class="btn-1">Ver</a>
-            </div>
-
-            <div class="swiper-slide neon-9">
-                <div class="icons">
-                    <i class="fa-solid fa-circle-arrow-left"> desliza</i>
-                    <img src="categorias/logo-gavilmotors.PNG" alt="Logo">
-                    <i class="fa-solid fa-circle-arrow-right"> desliza</i>
-                </div>
-                <!-- Imagen del carro debajo del logo -->
-                <div class="product-img">
-                    <img src="categorias/9.png" alt="Carro 1">
-                </div>
-                <!-- Contenido de texto y botón -->
-                <div class="product-content">
-                    <div class="product-txt">
-                        <span>$9500</span>
-                        <h3>NISSAN</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis</p>
+                        <span>$6900</span>
+                        <h3>CHEVROLET</h3>
+                        <p>CHEVROLET AVEO FAMILY 2016</p>
                     </div>
                 </div>
                 <a href="#" class="btn-1">Ver</a>
