CARROS ACTUAL SSANGYONG

--- a/CATEGORIAS-VEHICULOS/index.html
+++ b/CATEGORIAS-VEHICULOS/index.html
@@ -107,6 +107,11 @@
                         <i class="bi bi-hand-index-thumb"></i> LANDWIND
                     </button>
                 </li>
+                <li>
+                    <button id="ssangyong" class="boton-menu boton-categoria">
+                        <i class="bi bi-hand-index-thumb"></i> SSANGYONG
+                    </button>
+                </li>
             </ul>
 
             <!-- Pie de página del menú -->
