--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/ICF 0394/ICF 0394.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/ICF 0394/ICF 0394.html
@@ -54,7 +54,7 @@
             <p class="precio">$5,900</p>
             <div class="detalles">
                 <span>2005</span>
-                <span>??? Kms</span>
+                <span>358.000 Kms</span>
                 <span>Placa: I</span>
             </div>
         </div>
@@ -90,7 +90,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">??? km</span>
+                    <span class="info-value">358.000 km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
