--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PAC 2715/PAC-2715.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PAC 2715/PAC-2715.html
@@ -54,7 +54,7 @@
             <p class="precio">$10,800</p>
             <div class="detalles">
                 <span>2013</span>
-            <span>??? Kms</span>
+            <span>188.000 Kms</span>
                 <span>Placa: P</span>
             </div>
         </div>
@@ -92,7 +92,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">??? km</span>
+                    <span class="info-value">188.000 km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
