--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PBI 5785/PBI 5785.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PBI 5785/PBI 5785.html
@@ -54,7 +54,7 @@
             <p class="precio">$5,900</p>
             <div class="detalles">
                 <span>2011</span>
-                <span>??? Kms</span>
+                <span>836.000 Kms</span>
                 <span>Placa: p</span>
             </div>
         </div>
@@ -91,7 +91,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">??? km</span>
+                    <span class="info-value">836.000 km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
