--- a/CATEGORIAS-VEHICULOS/index.html
+++ b/CATEGORIAS-VEHICULOS/index.html
@@ -53,6 +53,11 @@
                     </button>
                 </li>
                 <li>
+                    <button id="VEHÍCULOS VENDIDOS" class="boton-menu boton-categoria">
+                        <i class="bi bi-hand-index-thumb"></i> VEHÍCULOS VENDIDOS
+                    </button>
+                </li>
+                <li>
                     <button id="chevrolet" class="boton-menu boton-categoria">
                         <i class="bi bi-hand-index-thumb"></i> CHEVROLET
                     </button>
