actualizacion PEUGEOT a SAIL 2012

--- a/CATEGORIAS-VEHICULOS/index.html
+++ b/CATEGORIAS-VEHICULOS/index.html
@@ -93,6 +93,11 @@
                     </button>
                 </li>
                 <li>
+                    <button id="peugeot" class="boton-menu boton-categoria">
+                        <i class="bi bi-hand-index-thumb"></i> PEUGEOT
+                    </button>
+                </li>
+                <li>
                     <button id="volkswagen" class="boton-menu boton-categoria">
                         <i class="bi bi-hand-index-thumb"></i> VOLKSWAGEN
                     </button>
