--- a/CATEGORIAS-VEHICULOS/index.html
+++ b/CATEGORIAS-VEHICULOS/index.html
@@ -56,6 +56,10 @@
                     <button id="VEHÍCULOS VENDIDOS" class="boton-menu boton-categoria">
                         <i class="bi bi-hand-index-thumb"></i> VEHÍCULOS VENDIDOS
                     </button>
+                    <li>
+                        <button id="VEHÍCULOS CHOCADOS" class="boton-menu boton-categoria">
+                            <i class="bi bi-hand-index-thumb"></i>VEHÍCULO CHOCADOS
+                        </button>
                 </li>
                 <li>
                     <button id="chevrolet" class="boton-menu boton-categoria">
