--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PDI 0987/PDI 0987.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PDI 0987/PDI 0987.html
@@ -54,7 +54,7 @@
             <p class="precio">$4,200</p>
             <div class="detalles">
                 <span>2004</span>
-                <span>??? Kms</span>
+                <span>220.000 Kms</span>
                 <span>Placa: P</span>
             </div>
         </div>
@@ -91,7 +91,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">??? km</span>
+                    <span class="info-value">220.000 km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
