--- a/CATEGORIAS-VEHICULOS/index.html
+++ b/CATEGORIAS-VEHICULOS/index.html
@@ -92,6 +92,11 @@
                     </button>
                 </li>
                 <li>
+                    <button id="mazda" class="boton-menu boton-categoria">
+                        <i class="bi bi-hand-index-thumb"></i> MAZDA
+                    </button>
+                </li>
+                <li>
                     <button id="kia" class="boton-menu boton-categoria">
                         <i class="bi bi-hand-index-thumb"></i> KIA
                     </button>
