--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PID 453/PID 453.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PID 453/PID 453.html
@@ -127,7 +127,7 @@
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
                         <source src="imgs/mazda 7 asientos.mp4" type="video/mp4">
-                        Tu navegador no soporta el elemento de video.
+                        Tu navegador no soporta el elemento de video
                     </video>
                 </a>
             </div>
