actualizacion nueva pc vitara vendido

--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/GCB 4993/GCB-4993.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/GCB 4993/GCB-4993.html
@@ -51,10 +51,10 @@
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
             <h1>Chevrolet Spark GT AC 1.2 5P 4x2 TM</h1>
-            <p class="precio">$7,200</p>
+            <p class="precio">$7,700</p>
             <div class="detalles">
                 <span>2019</span>
-                <span>??? Kms</span>
+                <span>136.000 Kms</span>
                 <span>Placa: G</span>
             </div>
         </div>
@@ -91,7 +91,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">??? km</span>
+                    <span class="info-value">136.000 km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
