ACTUALIZACION SIN NAVBAR

--- a/GAVILMOTORS.html
+++ b/GAVILMOTORS.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
     <title>GAVILMOTORS</title>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -24,12 +24,9 @@
         </div>
         <!-- Texto "Selecciona" con ícono -->
         <div class="selecciona-texto">
-            <i class="fas fa-hand-point-right"></i> <!-- Ícono de mano -->
-            <span>Selecciona</span>
+
         </div>
-        <div class="menu-icon" onclick="toggleMenu()">
-            <i class='bx bx-menu'></i>
-        </div>
+
         <div class="menu-container" id="menuContainer">
             <ul>
                 <li class="active"><a href="#">Inicio</a></li>
@@ -54,7 +51,7 @@
             <h2>
                 <span style="--i:4;" data-text="Somos un patio de autos">Somos un patio de autos</span>
                 <span style="--i:3;" data-text="Aceptamos solo transferencia">Aceptamos solo transferencia</span>
-                <span style="--i:2;" data-text="Varios modelos disponibles de vehículo">Varios modelos disponibles de vehículos</span>
+                <span style="--i:2;" data-text="Varios modelos de vehículos">Varios modelos de vehículos</span>
                 <span style="--i:1;" data-text="A 500km del Coral de Marianas">A 500km del Coral de Marianas</span>
             </h2>
             <p>En Gavil Motors nos especializamos en ofrecerte los mejores vehículos, con calidad garantizada y un servicio excepcional. ¡Encuentra el auto de tus sueños con nosotros!</p>
