--- a/GAVILMOTORS.html
+++ b/GAVILMOTORS.html
@@ -168,7 +168,7 @@
             <div class="footer-columna">
                 <div class="logo-footer">
                     <i class="fas fa-car-side"></i>
-                    <span>GAVIL MOTORS MOTORS</span>
+                    <span>GAVIL MOTORS</span>
                 </div>
                 <p>Av. Calderón-Marianas</p>
                 <p>Lunes a Viernes: 08:30 - 18:00</p>
