actualizacion llegada del SUZUKI VITARA

--- a/CATEGORIAS-VEHICULOS/index.html
+++ b/CATEGORIAS-VEHICULOS/index.html
@@ -78,6 +78,11 @@
                     </button>
                 </li>
                 <li>
+                    <button id="suzuki" class="boton-menu boton-categoria">
+                        <i class="bi bi-hand-index-thumb"></i> SUZUKI
+                    </button>
+                </li>
+                <li>
                     <button id="mitsubishi" class="boton-menu boton-categoria">
                         <i class="bi bi-hand-index-thumb"></i> MITSUBISHI
                     </button>
