llegada vitara sz

--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PBF 1921/PBF 1921.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PBF 1921/PBF 1921.html
@@ -61,10 +61,10 @@
 
         <!-- Carrusel de imágenes -->
         <div class="carrusel">
-            <img src="imgs/foto1.jpeg" alt="Imagen 1" class="carrusel-img active">
-            <img src="imgs/foto2.jpeg" alt="Imagen 2" class="carrusel-img">
-            <img src="imgs/foto3.jpeg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/foto4.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO1.jpg" alt="Imagen 1" class="carrusel-img active">
+            <img src="imgs/FOTO2.jpg" alt="Imagen 2" class="carrusel-img">
+            <img src="imgs/FOTO3.jpg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO4.jpg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
