--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PCA 6183/PCA 6183.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PCA 6183/PCA 6183.html
@@ -51,20 +51,21 @@
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
             <h1>HYUNDAI I10 5PAS 1.1</h1>
-            <p class="precio">$10,200</p>
+            <p class="precio">$6,600</p>
             <div class="detalles">
                 <span>2012</span>
-                <span>??? Kms</span>
+                <span>204,000 Kms</span>
                 <span>Placa: P</span>
             </div>
         </div>
 
         <!-- Carrusel de imágenes -->
         <div class="carrusel">
-            <img src="imgs/foto1.jpeg" alt="Imagen 1" class="carrusel-img active">
-            <img src="imgs/foto2.jpeg" alt="Imagen 2" class="carrusel-img">
-            <img src="imgs/foto3.jpeg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/foto4.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO1.jpeg" alt="Imagen 1" class="carrusel-img active">
+            <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
+            <img src="imgs/FOTO3..jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO4.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO5.jpeg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
@@ -75,7 +76,8 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">Hyundai</span>
+                    <span class="info-value">Hyundai
+                    </span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
@@ -91,7 +93,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">??? km</span>
+                    <span class="info-value">204,000 km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
@@ -125,7 +127,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/GCT 2738.mp4" type="video/mp4">
+                        <source src="imgs/hyundai i10.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
