ACTRRUALIZACION SONATA VENDIDO VA EL SZ

--- a/GAVILMOTORS.html
+++ b/GAVILMOTORS.html
@@ -104,20 +104,20 @@
 
             <!-- Tarjeta 2 -->
             <div class="auto-card destacado">
-                <div class="auto-imagen" style="background-image: url('categorias/sonata.jpeg')">
+                <div class="auto-imagen" style="background-image: url('categorias/SZ.jpg')">
                     <div class="auto-badge">MÁS VENDIDO</div>
                 </div>
                 <div class="auto-info">
-                    <h3>HYUNDAI SONATA FE AC 2.4 4P 4X2 TA HYBRID</h3>
+                    <h3>SUZUKI GRAND VITARA SZ</h3>
                     <div class="auto-especificaciones">
-                        <span><i class="fas fa-tachometer-alt"></i> 140.000 km</span>
+                        <span><i class="fas fa-tachometer-alt"></i> 267.000 km</span>
                         <span><i class="fas fa-horse-head"></i> 185 HP</span>
                     </div>
                     <div class="auto-precio">
-                        <span class="precio-anterior">$9.500 USD</span>
-                        <span class="precio-actual">$8.500 USD</span>
+                        <span class="precio-anterior">$7.700 USD</span>
+                        <span class="precio-actual">$6.900 USD</span>
                     </div>
-                    <a href="CATEGORIAS-VEHICULOS/vehiculos individuales/GSN 6735/GSN 6735.html" class="btn-ver-detalles">VER DETALLES <i class="fas fa-arrow-right"></i></a>
+                    <a href="CATEGORIAS-VEHICULOS/vehiculos individuales/PBF 1921/PBF 1921.html" class="btn-ver-detalles">VER DETALLES <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
         </div>
