actualizacion rutas i10 hyundai

--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PCA 6183/PCA 6183.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PCA 6183/PCA 6183.html
@@ -61,11 +61,11 @@
 
         <!-- Carrusel de imágenes -->
         <div class="carrusel">
-            <img src="imgs/FOTO1.JPEG" alt="Imagen 1" class="carrusel-img active">
-            <img src="imgs/FOTO2.JPEG" alt="Imagen 2" class="carrusel-img">
-            <img src="imgs/FOTO3..JPEG" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/FOTO4.JPEG" alt="Imagen 4" class="carrusel-img">
-            <img src="imgs/FOTO5.JPEG" alt="Imagen 5" class="carrusel-img">
+            <img src="imgs/11111.png" alt="Imagen 1" class="carrusel-img active">
+            <img src="imgs/22222.png" alt="Imagen 2" class="carrusel-img">
+            <img src="imgs/3333.png" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/4444.png" alt="Imagen 4" class="carrusel-img">
+            <img src="imgs/5555.png" alt="Imagen 5" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
