actualizacion carros nuevos llegasdos renault y yaris rojo

--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PBJ 4528/PBJ 4528.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PBJ 4528/PBJ 4528.html
@@ -54,7 +54,7 @@
             <p class="precio">$6,900</p>
             <div class="detalles">
                 <span>2010</span>
-                <span>??? Kms</span>
+                <span>300 Kms</span>
                 <span>Placa: p</span>
             </div>
         </div>
@@ -92,7 +92,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">??? km</span>
+                    <span class="info-value">300.000 km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
