--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PSD 0202/PSD 0202.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PSD 0202/PSD 0202.html
@@ -54,7 +54,7 @@
             <p class="precio">$2,900</p>
             <div class="detalles">
                 <span>1996</span>
-                <span>??? Kms</span>
+                <span>153 Kms</span>
                 <span>Placa: P</span>
             </div>
         </div>
@@ -91,7 +91,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">??? km</span>
+                    <span class="info-value">153.000 km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
