ACTUALIZACION CON FURGONETA ROJA

--- a/CATEGORIAS-VEHICULOS/index.html
+++ b/CATEGORIAS-VEHICULOS/index.html
@@ -88,6 +88,11 @@
                     </button>
                 </li>
                 <li>
+                    <button id="fiat" class="boton-menu boton-categoria">
+                        <i class="bi bi-hand-index-thumb"></i> FIAT
+                    </button>
+                </li>
+                <li>
                     <button id="renault" class="boton-menu boton-categoria">
                         <i class="bi bi-hand-index-thumb"></i> RENAULT
                     </button>
@@ -135,6 +140,11 @@
                 <li>
                     <button id="ssangyong" class="boton-menu boton-categoria">
                         <i class="bi bi-hand-index-thumb"></i> SSANGYONG
+                    </button>
+                </li>
+                <li>
+                    <button id="jetour" class="boton-menu boton-categoria">
+                        <i class="bi bi-hand-index-thumb"></i> JETOUR
                     </button>
                 </li>
             </ul>
