--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/AAW 0082/AAW 0082.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/AAW 0082/AAW 0082.html
@@ -65,6 +65,7 @@
             <img src="imgs/foto2.jpeg" alt="Imagen 2" class="carrusel-img">
             <img src="imgs/foto3.jpeg" alt="Imagen 3" class="carrusel-img">
             <img src="imgs/foto4.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/foto5.jpeg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
@@ -125,7 +126,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/BBB 3742.mp4" type="video/mp4">
+                        <source src="imgs/" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
