--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PBV 4714/PBV 4714.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PBV 4714/PBV 4714.html
@@ -126,7 +126,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/mazda 7 asientos.mp4" type="video/mp4">
+                        <source src="imgs/" type="video/mp4">
                         Tu navegador no soporta el elemento de video
                     </video>
                 </a>
