--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PBF 4394/PBF 4394.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PBF 4394/PBF 4394.html
@@ -116,7 +116,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Mitsubishi Montero SR 4x4 Sport Utility es un SUV robusto y versátil, con tracción en las cuatro ruedas (4x4) y opciones de motor gasolina o diésel. Ideal para aventuras y terrenos difíciles, combina potencia y confort.</p>
+            <p>KIA RIO STYLUS LS AC ex taxi conlleva un kilometraje de 400, subtipo sedan combina toda potencia y confort</p>
         </div>
 
         <!-- Sección de video y contacto -->
