actualizacion con el logan plomo ex taxi

--- a/CATEGORIAS-VEHICULOS/index.html
+++ b/CATEGORIAS-VEHICULOS/index.html
@@ -88,6 +88,11 @@
                     </button>
                 </li>
                 <li>
+                    <button id="byd" class="boton-menu boton-categoria">
+                        <i class="bi bi-hand-index-thumb"></i> BYD
+                    </button>
+                </li>
+                <li>
                     <button id="fiat" class="boton-menu boton-categoria">
                         <i class="bi bi-hand-index-thumb"></i> FIAT
                     </button>
