--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PSB 0064/PSB 0064.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PSB 0064/PSB 0064.html
@@ -50,21 +50,21 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>FIAT SPAZIO</h1>
-            <p class="precio">$2,900</p>
+            <h1>RENAULT LOGAN 1.6 M/T</h1>
+            <p class="precio">$4,900</p>
             <div class="detalles">
-                <span>1996</span>
-                <span>153 Kms</span>
+                <span>2006</span>
+                <span>190 Kms</span>
                 <span>Placa: P</span>
             </div>
         </div>
 
         <!-- Carrusel de imágenes -->
         <div class="carrusel">
-            <img src="imgs/foto1.jpeg" alt="Imagen 1" class="carrusel-img active">
-            <img src="imgs/foto2.jpeg" alt="Imagen 2" class="carrusel-img">
-            <img src="imgs/foto3.jpeg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/foto4.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO1..jpeg" alt="Imagen 1" class="carrusel-img active">
+            <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
+            <img src="imgs/FOTO3.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO4.jpeg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
@@ -75,11 +75,11 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">FIAT</span>
+                    <span class="info-value">RENAULT</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">SPAZIO</span>
+                    <span class="info-value">LOGAN 1.6 M/T</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -87,15 +87,15 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
-                    <span class="info-value">Monovolumen compacto</span>
+                    <span class="info-value">Sedán</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">153.000 km</span>
+                    <span class="info-value">190.000 km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
-                    <span class="info-value">1996</span>
+                    <span class="info-value">2006</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
@@ -103,7 +103,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
-                    <span class="info-value">Azul</span>
+                    <span class="info-value">Vino</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
@@ -115,7 +115,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Fiat Spazio 1996 es un monovolumen compacto con motor 1.6L de gasolina (90-100 HP), transmisión manual y capacidad para 5 pasajeros. Conocido por su versatilidad y espacio interior ajustable.</p>
+            <p>El Renault Logan 1.6 2006 es un sedán económico con motor 1.6L (90 HP) y transmisión manual. Destaca por su amplio espacio interior (510L de maletero) y mecánica sencilla.</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -125,7 +125,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/XCB 0988.mp4" type="video/mp4">
+                        <source src="imgs/LOGAN.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
