BOTON PARA MOSTRAR VENDIDOS

--- a/CATEGORIAS-VEHICULOS/index.html
+++ b/CATEGORIAS-VEHICULOS/index.html
@@ -20,8 +20,9 @@
             <h1 class="logo">GAVIL MOTORS</h1>
             <!-- Texto "Selecciona" con ícono (solo para móviles) -->
             <div class="selecciona-texto">
+
+                <span>MOSTRAR VENDIDOS</span>
                 <i class="fas fa-hand-point-right"></i> <!-- Ícono de mano señalando a la derecha -->
-                <span>Selecciona</span>
             </div>
             <!-- Botón para abrir el menú en móviles -->
             <button class="open-menu" id="open-menu">
