actualizacion con furgo azul

--- a/CATEGORIAS-VEHICULOS/index.html
+++ b/CATEGORIAS-VEHICULOS/index.html
@@ -84,6 +84,11 @@
                     </button>
                 </li>
                 <li>
+                    <button id="shineray" class="boton-menu boton-categoria">
+                        <i class="bi bi-hand-index-thumb"></i> SHINERAY
+                    </button>
+                </li>
+                <li>
                     <button id="mitsubishi" class="boton-menu boton-categoria">
                         <i class="bi bi-hand-index-thumb"></i> MITSUBISHI
                     </button>
