--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PWL 0287/PWL 0287.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PWL 0287/PWL 0287.html
@@ -50,21 +50,21 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>SUZUKI GRAND VITARA SZ 2.7L V6 5P TA 4X4</h1>
-            <p class="precio">$6,950</p>
+            <h1>DAEWOO MATIZ STD</h1>
+            <p class="precio">$3,500</p>
             <div class="detalles">
-                <span>2009</span>
-                <span>267.000 kms</span>
+                <span>2000</span>
+                <span>295.000 kms</span>
                 <span>Placa: P</span>
             </div>
         </div>
 
         <!-- Carrusel de imágenes -->
         <div class="carrusel">
-            <img src="imgs/FOTO1.jpg" alt="Imagen 1" class="carrusel-img active">
-            <img src="imgs/FOTO2.jpg" alt="Imagen 2" class="carrusel-img">
-            <img src="imgs/FOTO3.jpg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/FOTO4.jpg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/foto1.jpeg" alt="Imagen 1" class="carrusel-img active">
+            <img src="imgs/foto2.jpeg" alt="Imagen 2" class="carrusel-img">
+            <img src="imgs/foto3.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/foto4.jpeg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
@@ -75,27 +75,27 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">SUZUKI</span>
+                    <span class="info-value">DAEWOO</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">GRAND VITARA SZ 2.7L V6 5P TA 4X4</span>
+                    <span class="info-value">MATIZ STD</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
-                    <span class="info-value">Automática</span>
+                    <span class="info-value">Manual</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
-                    <span class="info-value">SUV</span>
+                    <span class="info-value">Hatchback</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">267.000 km</span>
+                    <span class="info-value">295.000 km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
-                    <span class="info-value">2009</span>
+                    <span class="info-value">2000</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
@@ -103,7 +103,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
-                    <span class="info-value">Plateado</span>
+                    <span class="info-value">Blanco</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
@@ -115,7 +115,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Suzuki Grand Vitara SZ 2.7L V6 es un SUV robusto con potente motor 2.7L V6 (185 HP), transmisión automática, tracción 4x4 permanente y carrocería plateada. Ideal para off-road y ciudad.</p>
+            <p>El Daewoo Matiz STD 2000 es un hatchback urbano con motor 0.8L 3 cilindros (51 HP), transmisión manual y equipamiento básico. Ideal para ciudad por su tamaño compacto y bajo consumo.</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -125,7 +125,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/SUSUZKI VITARA.mp4" type="video/mp4">
+                        <source src="imgs/daewoo matiz.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
