--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PBA 8378/PBA 8378.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PBA 8378/PBA 8378.html
@@ -50,11 +50,11 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>KIA SOLUTO LX 1.4 4P 4X2 TM</h1>
-            <p class="precio">$9,200</p>
+            <h1>LADA SEDAN 2005</h1>
+            <p class="precio">$2,900</p>
             <div class="detalles">
-                <span>2023</span>
-                <span>30,000 Kms</span>
+                <span>2005</span>
+                <span>346,000 Kms</span>
                 <span>Placa: P</span>
             </div>
         </div>
@@ -63,9 +63,9 @@
         <div class="carrusel">
             <img src="imgs/FOTO1.jpeg" alt="Imagen 1" class="carrusel-img active">
             <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
+            <img src="imgs/FOTO3.jpeg" alt="Imagen 2" class="carrusel-img">
             <img src="imgs/FOTO4.jpeg" alt="Imagen 3" class="carrusel-img">
             <img src="imgs/FOTO5.jpeg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/FOTO6.jpeg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
@@ -76,11 +76,11 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">KIA</span>
+                    <span class="info-value">LADA</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">SOLUTO LX 1.4 4P 4X2 TM</span>
+                    <span class="info-value">Sedan/span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -92,7 +92,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">30,000 km</span>
+                    <span class="info-value">346,000 km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
@@ -104,7 +104,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
-                    <span class="info-value">Plomo</span>
+                    <span class="info-value">Vino</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
@@ -116,7 +116,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Kia Soluto LX 1.4 es un sedán de entrada con motor 1.4L de gasolina y transmisión manual. Versión "LX" con equipamiento básico, ideal para uso urbano por su eficiencia y bajo costo de mantenimiento.</p>
+            <p>El Lada Sedan 2005 es un vehículo económico de origen ruso con motor 1.6L (81-89 HP), transmisión manual y diseño sencillo. Conocido por su resistencia mecánica y bajo costo de repuestos.</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -126,7 +126,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/KIA SONATO.mp4" type="video/mp4">
+                        <source src="imgs/lada vino.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
