--- a/CATEGORIAS-VEHICULOS/index.html
+++ b/CATEGORIAS-VEHICULOS/index.html
@@ -79,6 +79,11 @@
                     </button>
                 </li>
                 <li>
+                    <button id="chery" class="boton-menu boton-categoria">
+                        <i class="bi bi-hand-index-thumb"></i> CHERY
+                    </button>
+                </li>
+                <li>
                     <button id="suzuki" class="boton-menu boton-categoria">
                         <i class="bi bi-hand-index-thumb"></i> SUZUKI
                     </button>
@@ -106,6 +111,11 @@
                 <li>
                     <button id="fiat" class="boton-menu boton-categoria">
                         <i class="bi bi-hand-index-thumb"></i> FIAT
+                    </button>
+                </li>
+                <li>
+                    <button id="jcm" class="boton-menu boton-categoria">
+                        <i class="bi bi-hand-index-thumb"></i> JCM
                     </button>
                 </li>
                 <li>
@@ -161,6 +171,11 @@
                 <li>
                     <button id="jetour" class="boton-menu boton-categoria">
                         <i class="bi bi-hand-index-thumb"></i> JETOUR
+                    </button>
+                </li>
+                 <li>
+                    <button id="lada" class="boton-menu boton-categoria">
+                        <i class="bi bi-hand-index-thumb"></i> LADA
                     </button>
                 </li>
             </ul>
